--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.13.1",
     "next": "15.0.3",
     "nextra": "^3.2.4",
     "nextra-theme-docs": "^3.2.4",
@@ -23,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "shiki": "^1.24.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
