config changes, broken links. TODO: seo, page titles, test all example code on site...

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "theme.config.jsx"
+    "theme.config.tsx"
   ],
   "exclude": [
     "node_modules"
