--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -35,6 +35,9 @@ jobs:
         
       - name: Build with Nextra
         run: npm run build
+        
+      - name: Clear npm cache
+        run: npm cache clean --force
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
