--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "framer-motion": "^11.13.1",
+    "highlight.js": "^11.11.1",
     "next": "15.0.3",
     "nextra": "^3.2.4",
     "nextra-theme-docs": "^3.2.4",
@@ -26,7 +27,6 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "shiki": "^1.24.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
